--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,10 +3,14 @@ layout: default
 title: Portfolio
 ---
 
-		<div class="about">
-			<h1>Projects</h1>
-			<ul>
-				<li><a href="https://www.linkedin.com/in/anh-nguyent/">LinkedIn</a></li>
-				<li><a href="https://www.facebook.com/tuananh250993">Facebook</a></li>
-				</ul>
-		</div>
+<div class="about">
+	<h1>Projects</h1>
+	<ul>
+		<li>Subi
+			<iframe width="420" height="315"
+			src="https://www.youtube.com/watch?v=gz4Y8c8hB64">
+			</iframe>
+		</li>
+		<li><a href="https://www.facebook.com/tuananh250993">Facebook</a></li>
+		</ul>
+</div>
