--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,9 +6,9 @@ title: Portfolio
 <div class="about">
 	<h1>Projects</h1>
 	<ul>
-		<li>Subi
+		<li>
 			<iframe width="420" height="315"
-			src="https://www.youtube.com/watch?v=gz4Y8c8hB64">
+			src="https://www.youtube.com/embed/gz4Y8c8hB64">
 			</iframe>
 		</li>
 		<li><a href="https://www.facebook.com/tuananh250993">Facebook</a></li>
